<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_basket">Basket</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_account">Account</string>
    <string name="btn_buy_now">Buy now!</string>
    <string name="tv_hot_sales">Hot sales</string>
    <string name="tv_best_seller">Best Seller</string>
    <string name="tv_select_category">Select Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product_details">Product Details</string>
    <string name="title_details">Details</string>
    <string name="title_shop">Shop</string>
    <string name="title_features">Features</string>
    <string name="title_select_color">Select color and capacity</string>
    <string name="cost">$%s</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>