<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explorer">

    <fragment
        android:id="@+id/navigation_explorer"
        android:name="com.aleisder.ecommerceapp.presentation.store_screen.StoreFragment"
        android:label="@string/title_explorer"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.aleisder.ecommerceapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.aleisder.ecommerceapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_notifications" />
</navigation>