<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aleisder.ecommerceapp.presentation.store.StoreFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_select_category"
        style="@style/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_select_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv_categories"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_category"
        tools:layout_editor_absoluteX="0dp">


    </ListView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_best_sale"
        style="@style/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_hot_sales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_categories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hot_sales_list"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_best_sale"
        tools:listitem="@layout/hot_sales_item" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_best_seller"
        style="@style/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_best_seller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_hot_sales_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_best_seller_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="6dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_best_seller"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/best_seller_item" />

</androidx.constraintlayout.widget.ConstraintLayout>