<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aleisder.ecommerceapp.presentation.details.ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_product_details"
            style="@style/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_product_details"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintEnd_toStartOf="@+id/btn_to_basket"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@+id/btn_back" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_basket"
            android:gravity="center"
            android:id="@+id/btn_to_basket"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_photos"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_product_details" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_product_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardElevation="30dp"
            app:cardCornerRadius="30dp"
            app:contentPadding="20dp"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_product_photos">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_title"
                    style="@style/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Galaxy Note 20 Ultra" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_shop"
                    style="@style/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/title_shop"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_details"
                    style="@style/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_details"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/title_features"
                    app:layout_constraintStart_toEndOf="@+id/tv_shop"
                    app:layout_constraintTop_toTopOf="@+id/tv_shop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_features"
                    style="@style/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_features"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_shop" />

                <ImageView
                    android:id="@+id/iv_cpu"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_cpu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_shop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_cpu_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@+id/iv_cpu"
                    app:layout_constraintStart_toStartOf="@id/iv_cpu"
                    app:layout_constraintTop_toBottomOf="@id/iv_cpu"
                    tools:text="Exonys 990" />

                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintEnd_toStartOf="@id/iv_card"
                    app:layout_constraintStart_toEndOf="@id/iv_cpu"
                    app:layout_constraintTop_toTopOf="@id/iv_cpu" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_camera_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@+id/iv_camera"
                    app:layout_constraintStart_toStartOf="@+id/iv_camera"
                    app:layout_constraintTop_toBottomOf="@+id/iv_camera"
                    tools:text="108 + 12 mp" />

                <ImageView
                    android:id="@+id/iv_card"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_ram"
                    app:layout_constraintEnd_toStartOf="@+id/iv_memory"
                    app:layout_constraintStart_toEndOf="@id/iv_camera"
                    app:layout_constraintTop_toBottomOf="@+id/tv_shop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_ram_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@+id/iv_card"
                    app:layout_constraintStart_toStartOf="@+id/iv_card"
                    app:layout_constraintTop_toBottomOf="@+id/iv_card"
                    tools:text="8 GB" />

                <ImageView
                    android:id="@+id/iv_memory"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_card"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_cpu" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_memory_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@+id/iv_memory"
                    app:layout_constraintStart_toStartOf="@+id/iv_memory"
                    app:layout_constraintTop_toBottomOf="@+id/iv_memory"
                    tools:text="256 GB" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_select_color"
                    style="@style/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp"
                    android:text="@string/title_select_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_cpu" />




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>